tests/vendor/valid/simple/ternary.c
//expect 4
//tags: simple, conditional
int main() {
    int a = 0;
    return a > -1 ? 4 : 5;
}