tests/vendor/invalid/semantics/undeclared_var_in_ternary.c
//tags: simple, conditional
int main() {
    return a > 0 ? 1 : 2;
    int a = 5;
}